test/e2e/.snapshots/TestSetupFailureFlow/Invalid_Public_Key/POST__api_atlas_v2_groups_5efda6aea3f2ed2e7dd6ce05_databaseUsers_2.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Tue, 01 Apr 2025 17:41:25 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="P/2IQA9G0D26hicEAu9KknffBKaoM4rC", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 7

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}